--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install pytest-cov
     - name: Install the python project
       env:
         INSTALL_TYPE: ${{ matrix.install-type }}
       run: .ci/install_script.sh
-    - name: Test with pytest
+    - name: Test with pytest, generate coverage report
       run: |
-        pytest
+        pytest --cov=./ --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
