Move install_script.sh from ci to github folder

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install the python project
       env:
         INSTALL_TYPE: ${{ matrix.install-type }}
-      run: .ci/install_script.sh
+      run: .github/install_script.sh
     - name: Test with pytest, generate coverage report
       run: |
         pytest --cov=./ --cov-report=xml
