--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,35 +1,33 @@
-name: wannier-berri
+name: codecov
 
 on:
-  pull_request:
   push:
+  pull_request:
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-        install-type: [dev]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.9
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install pytest-cov
         pip install tbmodels
         pip install pythtb
     - name: Install the python project
       env:
-        INSTALL_TYPE: ${{ matrix.install-type }}
+        INSTALL_TYPE: dev
       run: .github/install_script.sh
-    - name: Test with pytest
+    - name: Test with pytest, generate coverage report
       run: |
-        pytest
+        pytest --cov=./ --cov-report=xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
