Run flake8 for tests

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,4 +18,5 @@ jobs:
         run: pip install flake8
       - name: Static analysis
         run: flake8 --config .flake8 wannierberri
-        #run: flake8 --config .flake8 wannierberri tests
+      - name: Static analysis for tests folder
+        run: flake8 --config .flake8 tests
