Make flake8 run even if previous job errored

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,4 +19,5 @@ jobs:
       - name: Static analysis
         run: flake8 --config .flake8 wannierberri
       - name: Static analysis for tests folder
+        if: always()
         run: flake8 --config .flake8 tests
