flake: allowed 'invalid escape secuence'

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,8 @@ ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222, E225, E226, \
          E501, \ # line too long
          E272, \ # multiple spaces before keyword
          E124, \ # closing bracket does not match visual indentation
-         E128    # continuation line under-indented for visual indent
+         E128, \ # continuation line under-indented for visual indent
+         W605    # invalid escape sequence  - does not allow to use LaTeX
 
 exclude = .git, __pycache__, build, dist, __init__.py .eggs, *.egg
 max-line-length = 120
