--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,8 @@ version = attr: wannierberri.__version__
 ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222, E225, E226,
          E228, E231, E241, E261, E262, E265, E266, E301, E302, E303, E305,
          E306, E401, E402, E701, E731, E741, W391, W503, W504, C901,
+         # do not compare types
+         E721,
          # line too long
          E501,
          # multiple spaces before keyword
