--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,10 @@ version = attr: wannierberri.__version__
 
 [flake8]
 ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222, E225, E226,
-         E228, E231, E241, E261, E262, E265, E266, E301, E302, E303, E305,
-         E306, E401, E402, E701, E731, E741, W391, W503, W504, C901,
+         E228, E241, E261, E262, E265, E266, E303,
+          E402, E701, E741, W391, W503,
+         #  do not assign a lambda expression, use a def - we like it in sym_wann
+         E731,
          # do not compare types
          E721,
          # line too long
