--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 version = attr: wannierberri.__version__
 
 [flake8]
-ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222, E225, E226,
-         E228, E241, E261, E262, E265, E266, E303,
-          E402, E701, E741, W391, W503,
+ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222,
+         E241, E261, E262, E265, E266, E303,
+          E402, E741, W391, W503, E701
          #  do not assign a lambda expression, use a def - we like it in sym_wann
          E731,
          # do not compare types
