fixed E503, wich broke E504, that is now allowed (line break after binary operator)

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,12 @@ version = attr: wannierberri.__version__
 
 [flake8]
 ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222,
-          E261, E262, E266, E303,
-          E741, W391, W503
+          E261, E262, E266, 
+          E741, 
+         # line break after binary operator
+         W504, 
+         # too many blamk lines
+         E303,
          #  do not assign a lambda expression, use a def - we like it in sym_wann
          E731,
          # do not compare types
