--- a/setup.cfg
+++ b/setup.cfg
@@ -2,11 +2,14 @@
 version = attr: wannierberri.__version__
 
 [flake8]
-ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222,
-          E261, E262, E266, 
-          E741, 
+ignore = E126, E127, E129, E201, E202, E203, E211, 
+        # E221, 
+         # too many leading '#' for block comment
+         E266,
+         # ambiguous variable name
+         E741,
          # line break after binary operator
-         W504, 
+         W504,
          # too many blamk lines
          E303,
          #  do not assign a lambda expression, use a def - we like it in sym_wann
