--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,7 @@
 version = attr: wannierberri.__version__
 
 [flake8]
-ignore = E126, E127, E129, E201, E202, E203, E211, 
-        # E221, 
+ignore = E126, E127, E129, E201, E202,   E203, 
          # too many leading '#' for block comment
          E266,
          # ambiguous variable name
