--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,8 @@
 version = attr: wannierberri.__version__
 
 [flake8]
-ignore = E126, E127, E129, E201, E202,  
-        # E203, 
+ignore = E126, E127, E129, E201, 
+        # E202,  
          # too many leading '#' for block comment
          E266,
          # ambiguous variable name
