--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,9 @@
 version = attr: wannierberri.__version__
 
 [flake8]
-ignore = E126, E127, E129, 
-#         E201,
+ignore = E126, 
+#E127, 
+        # E129, 
          # too many leading '#' for block comment
          E266,
          # ambiguous variable name
