--- a/setup.cfg
+++ b/setup.cfg
@@ -3,30 +3,29 @@ version = attr: wannierberri.__version__
 
 [flake8]
 ignore = E126, 
-#E127, 
-        # E129, 
-         # too many leading '#' for block comment
+         # continuation line over-indented for hanging indent
          E266,
-         # ambiguous variable name
+         # too many leading '#' for block comment
          E741,
-         # line break after binary operator
+         # ambiguous variable name
          W504,
-         # too many blamk lines
+         # line break after binary operator
          E303,
-         #  do not assign a lambda expression, use a def - we like it in sym_wann
+         # too many blamk lines
          E731,
-         # do not compare types
+         #  do not assign a lambda expression, use a def - we like it in sym_wann
          E721,
-         # line too long
+         # do not compare types
          E501,
-         # multiple spaces before keyword
+         # line too long
          E272,
-         # closing bracket does not match visual indentation
+         # multiple spaces before keyword
          E124,
-         # continuation line under-indented for visual indent
+         # closing bracket does not match visual indentation
          E128,
-         # invalid escape sequence  - does not allow to use LaTeX
+         # continuation line under-indented for visual indent
          W605
+         # invalid escape sequence  - does not allow to use LaTeX
 
 exclude = .git, __pycache__, build, dist, __init__.py .eggs, *.egg
 max-line-length = 120
