fixed most of pep8 issues.  (#297)
Fixed most of pep issues

Now all the ignored errors are explicitly commented in setup.cfg

errors removed from ignore:
E127, E129, E201, E202, E203, E211, E221, E222, E225, E226, E228, E231, E241, E261, E262, E265, E301, E302, E305, E306, E401, E503, E402, C901, W405, E701
Does not change anything meaningful, just cosmetics

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,21 +2,30 @@
 version = attr: wannierberri.__version__
 
 [flake8]
-ignore = E126, E127, E129, E201, E202, E203, E211, E221, E222, E225, E226,
-         E228, E231, E241, E261, E262, E265, E266, E301, E302, E303, E305,
-         E306, E401, E402, E701, E731, E741, W391, W503, W504, C901,
-         # do not compare types
+ignore = E126, 
+         # continuation line over-indented for hanging indent
+         E266,
+         # too many leading '#' for block comment
+         E741,
+         # ambiguous variable name
+         W504,
+         # line break after binary operator
+         E303,
+         # too many blamk lines
+         E731,
+         #  do not assign a lambda expression, use a def - we like it in sym_wann
          E721,
-         # line too long
+         # do not compare types
          E501,
-         # multiple spaces before keyword
+         # line too long
          E272,
-         # closing bracket does not match visual indentation
+         # multiple spaces before keyword
          E124,
-         # continuation line under-indented for visual indent
+         # closing bracket does not match visual indentation
          E128,
-         # invalid escape sequence  - does not allow to use LaTeX
+         # continuation line under-indented for visual indent
          W605
+         # invalid escape sequence  - does not allow to use LaTeX
 
 exclude = .git, __pycache__, build, dist, __init__.py .eggs, *.egg
 max-line-length = 120
