--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,8 @@ version = attr: wannierberri.__version__
 [flake8]
 ignore = E126, 
          # continuation line over-indented for hanging indent
+         E201, E202, E203, E221, E222, E226, E241, E231, E261, E265, E301, E302,
+         # some temporary, to accept Oscar's request
          E266,
          # too many leading '#' for block comment
          E741,
@@ -24,6 +26,8 @@ ignore = E126,
          # closing bracket does not match visual indentation
          E128,
          # continuation line under-indented for visual indent
+         W503,
+         # line break before binary operator 
          W605
          # invalid escape sequence  - does not allow to use LaTeX
 
