--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,9 @@
 version = attr: wannierberri.__version__
 
 [flake8]
-ignore = E126, 
+ignore = E123 
+         # closing bracket does not match indentation of opening bracket's line
+         E126, 
          # continuation line over-indented for hanging indent
          E266,
          # too many leading '#' for block comment
@@ -24,6 +26,10 @@ ignore = E126,
          # closing bracket does not match visual indentation
          E128,
          # continuation line under-indented for visual indent
+         W291 
+         # trailing whitespace
+         W293 
+         # blank line contains whitespace
          W503,
          # line break before binary operator 
          W605
