--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -30,7 +30,7 @@ jobs:
       run: .github/install_script.sh
     - name: Test with pytest, generate coverage report
       run: |
-        pytest tests/test_wannierise.py   --cov=./wannierberri --cov-report=xml
+        pytest tests   --cov=./wannierberri --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       env:
